Added mobile compatibility css and a favicon

--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -20,12 +20,14 @@
     padding: 0 $s-size;
 }
 
-@media (min-width: 45rem)
+@media (max-width: $desktop-breakpoint)
 {
-    /*
     .add-option
     {
-        flex-direction: row;
+        flex-direction: column;
     }
-    */
+    .add-option__textbox
+    {
+        margin: 0 0 $s-size 0;
+    }
 }
