--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -34,3 +34,11 @@
     color: $off-white;
     padding: 0;
 }
+
+@media (max-width: $desktop-breakpoint)
+{
+    .big-button
+    {
+        margin-bottom: $m-size;
+    }
+}
